compiler/testData/diagnostics/tests/typealias/noRHS.kt
// FIR_IDENTICAL
typealias<!SYNTAX!><!>

<!SYNTAX!><!>typealias A1<!SYNTAX!><!>

<!SYNTAX!><!>typealias A2 =

<!SYNTAX!><!>typealias Valid = String
